-adjusted column margins and paddings -modified colors a bit

--- a/components.html
+++ b/components.html
@@ -164,7 +164,7 @@
 			
 			<div class="col col-12">
 				<div class="btn">Button</div>
-				<div class="btn btn-default">Primary</div>
+				<div class="btn btn-default">Default</div>
 				<div class="btn btn-primary">Primary</div>
 				<div class="btn btn-success">Success</div>
 				<div class="btn btn-warn">Warn</div>
@@ -179,7 +179,7 @@
 			
 			<div class="col col-12">
 				<div class="btn rounded-corners">Button</div>
-				<div class="btn btn-default rounded-corners">Primary</div>
+				<div class="btn btn-default rounded-corners">Default</div>
 				<div class="btn btn-primary rounded-corners">Primary</div>
 				<div class="btn btn-success rounded-corners">Success</div>
 				<div class="btn btn-warn rounded-corners">Warn</div>
@@ -187,6 +187,28 @@
 			</div>
 		</div>
 		
+		<div class="row">
+			<div class="col col-12">
+				<h3>Sized Buttons</h3>
+			</div>
+			
+			<div class="col col-12">
+				<div class="row">
+					<div class="col col-12">
+						<div class="btn sm">Small</div>
+						<div class="btn">Default</div>
+						<div class="btn lg">Large</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col col-12">
+						<div class="btn rounded-corners sm">Small</div>
+						<div class="btn rounded-corners">Default</div>
+						<div class="btn rounded-corners lg">Large</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		
 		
 <!-- 		FORMS -->
