--- a/columns.html
+++ b/columns.html
@@ -151,6 +151,7 @@
 <!-- 		Nested -->
 		<div class="row">
 			<div class="col col-6">
+				<p>col-6</p>
 				<div class="col col-6">
 					<p>col-6</p>
 				</div>
@@ -159,6 +160,7 @@
 				</div>
 			</div>
 			<div class="col col-6">
+				<p>col-6</p>
 				<div class="col col-3">
 					<p>col-3</p>
 				</div>
